--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html {
 }
 
 a {
+  font-family: "Poppins";
   text-decoration: none;
   text-align: center;
   font-weight: 100;
@@ -14,10 +15,9 @@ a {
 
 nav {
   justify-content: space-between;
-  background: #ffffff;
+  background: #fff;
   top: 0;
   padding: 12px 2%;
-  
 }
 
 .flex-nav {
@@ -28,7 +28,7 @@ nav {
 
 .left a {
   font-weight: bold;
-  color: #6070FF;
+  color: #6070ff;
   width: 100%;
   left: 50px;
   font-size: 18px;
@@ -39,5 +39,4 @@ nav {
   right: 50px;
   font-size: 14px;
   margin-right: 20px;
-
 }
