--- a/style.css
+++ b/style.css
@@ -24,15 +24,15 @@ a {
 
 h1 {
   font-family: "Poppins", sans-serif;
-  font-weight: bolder;
-  color: #172b4d;
+  font-weight: 900;
+  color: #172B4D;
   line-height: 50px;
   font-size: 40px;
   margin-top: 60px;
 }
 
 p {
-  columns: #344563;
+  color: #344563;
   font-family: "Poppins", sans-serif;
   text-align: left;
   font-size: 16px;
@@ -42,7 +42,6 @@ p {
 .let-connect {
   color: #7f8cff;
   font-size: 18px;
-  margin-top: 0px;
 }
 
 .flex-nav {
