--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
 h1 {
   font-family: "Poppins", sans-serif;
   font-weight: 900;
-  color: #172B4D;
+  color: #172b4d;
   line-height: 50px;
   font-size: 40px;
   margin-top: 60px;
